Add build system.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-.idea
+build/
+
+# You should commit npm/bower packages in your projects
+node_modules/
+vendor/
+
+.sass-cache/
+
+*.iml
+.idea/
+
+npm-debug.log
+
 api/user.php
