fixed logo path.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Rokort",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "assets/images/logo.png",
       "sizes": "100x100",
       "type": "image/png",
       "density": "2.0"
