--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "angular": "~1.3.14",
     "ui-router": "~0.2.13",
     "angular-animate": "~1.3.15",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular-ui-select": "~0.11.2",
+    "angular-sanitize": "~1.3.15"
   }
 }
